improved project area, fixed spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -380,6 +380,7 @@ button {
     background-color: var(--secondaryVariantColor);
     border-color: var(--secondaryVariantColor);
     color: var(--primaryColor);
+    margin: 0.2em 0;
     font-family: 'Roboto';
     box-shadow: 0px 4px 10px 0px #000000;
     border: 0;
@@ -470,6 +471,7 @@ button {
     font-weight: 600;
     border-radius: 4px;
     padding: 0.4em;
+    margin: 0.2em 0;
     border-width: 1em;
     border: 3px solid teal
 }
@@ -539,11 +541,19 @@ button {
 
 .project-category {
     margin-bottom: 1em;
-    font-size: 0.8em;
+    font-size: 1em;
+    font-weight: bold;
+    color: var(--secondaryVariantColor);
+
 }
 
 .project>h1 {
     text-align: center;
+}
+
+/* Project description more section */
+.show-more {
+    display: none;
 }
 
 .skill-container {
@@ -805,8 +815,6 @@ textarea {
         margin-left: 0.5em;
         margin-right: 0.5em;
         display: flex;
-        max-width: 600px;
-        max-height: 400px;
         align-items: center;
         flex-basis: 100%;
         justify-content: center;
@@ -815,8 +823,8 @@ textarea {
     .project-image>img {
         display: block;
         width: 100%;
-        max-height: 250px;
         max-width: 600px;
+        max-height: 400px;
         align-content: center;
         height: auto;
         margin: 0em;
